added body to index html

--- a/index.html
+++ b/index.html
@@ -10,3 +10,46 @@
         rel="stylesheet">
 </head>
 
+
+<body>
+    <div class="back">
+        <header>
+            <div class="logo">Arinjoy (AJ) Das
+            </div>
+
+            <nav class="navbar">
+                <div class="nav-links">
+                    <ul>
+                        <li><a href="./index.html" class="active bold">HOME</a></li>
+                        <li><a href="./about.html" class="bold">ABOUT</a></li>
+                        <li><a href="./experience.html" class="bold">EXPERIENCE</a></li>
+                        <li class="dropdown">
+                            <button class="dropbtn bold">CONTACT</button>
+                            <div class="dropdown-content">
+                                <a href="https://www.linkedin.com/in/arinjoydas/">LinkedIn</a>
+                                <a href="mailto:arinjoy@umich.edu">Email</a>
+                                <a href="assets/AJDas_Resumefinal.pdf" target="_blank">Resume</a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+
+        <section class="hero"></section>
+        <main class="content">
+            <div class="column-left">
+                <h1 id="typing-effect"></h1>
+                <p class="subtitle">Junior at UMich studying CS</p>
+                <p class="description">Balancing technical expertise with creative pursuits, I'm a multifaceted
+                    professional ready to tackle the challenges of the tech world.</p>
+            </div>
+            <div class="profilepicture">
+                <img src="images/headshot2025.jpg" class="hero-image" alt="Profile Picture">
+            </div>
+        </main>
+</body>
+
+
+
+</html>
