--- a/index.html
+++ b/index.html
@@ -50,6 +50,31 @@
         </main>
 </body>
 
+<script>
+    const animateText = "Arinjoy (AJ) Das";
+    let index = 0;
+    const typingspeed = 110;
+    const cursorChar = '|';
+    let cursorVisible = true;
+    const subtitleText = "Junior at UMich studying CS";
 
+    function typeEffect() {
+        const targetElement = document.getElementById("typing-effect");
+
+        cursorVisible = !cursorVisible;
+        const cursor = cursorVisible ? cursorChar : '';
+
+        if (index < animateText.length) {
+            targetElement.innerHTML = animateText.substring(0, index + 1) + cursor;
+            index++;
+            setTimeout(typeEffect, typingspeed);
+        } else {
+            targetElement.innerHTML = animateText; // Add + cursor to keep it blinking
+        }
+    }
+
+    window.onload = typeEffect;
+
+</script>
 
 </html>
