hover effect on profile image

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
                     professional ready to tackle the challenges of the tech world.</p>
             </div>
             <div class="profilepicture">
-                <img src="images/headshot2025.jpg" class="hero-image" alt="Profile Picture">
+                <a href="https://www.linkedin.com/in/arinjoydas/" target="_blank">
+                    <img src="images/headshot2025.jpg" class="hero-image" alt="Profile Picture">
+                </a>
             </div>
         </main>
 </body>
